AngularNoSTD/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: angular-frontend
  namespace: fintech
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: "nlb"
    service.beta.kubernetes.io/aws-load-balancer-cross-zone-load-balancing-enabled: "true"
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  selector:
    app: frontend  # Matches the deployment labels
